# mnemosyne

./: .editorconfig  .env.example  .gitignore  .pre-commit-config.yaml  AGENTS.md  ARCHITECTURE.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  LICENSE  LICENSE.md  Makefile  README.ja.md  README.ko.md  README.md  README.zh-CN.md  SECURITY.md  docker-compose.yml  install.sh  mkdocs.yml  pyproject.toml
.github/: CODEOWNERS  FUNDING.yml  dependabot.yml  pull_request_template.md  stale.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml  docs.yml  release.yml  security.yml
.sisyphus/: ralph-loop.local.md
docs/: index.md
docs/api/: capture.md  execute.md  index.md  llm.md  memory.md  reason.md  store.md
docs/development/: release.md  testing.md
docs/getting-started/: configuration.md  installation.md  quickstart.md
docs/guide/: agents.md  analysis.md  execution.md  gateway.md  hooks.md  memory.md  plugins.md  recording.md  tasks.md  tui.md  web-interface.md
docs/marketing/: AWESOME_LISTS.md  GITHUB_TOPICS.md  SOCIAL_TEMPLATES.md  STAR_STRATEGY.md
docs/stylesheets/: extra.css
examples/: README.md  analyze_session.py  basic_recording.py  config.example.toml  memory_search.py  web_api_client.py
mnemosyne/: __init__.py  py.typed
mnemosyne/agents/: __init__.py  base.py  orchestrator.py  types.py
mnemosyne/aggregation/: __init__.py  aggregator.py  models.py
mnemosyne/analytics/: __init__.py  reports.py  statistics.py  summary.py
mnemosyne/capture/: __init__.py  events.py  keyboard.py  mouse.py  recorder.py  screen.py  window.py
mnemosyne/cli/: __init__.py  main.py  setup.py
mnemosyne/config/: __init__.py  schema.py  settings.py
mnemosyne/execute/: __init__.py  agent.py  controller.py  patterns.py  planner.py  safety.py  screen.py  smart.py
mnemosyne/grounding/: __init__.py  detection.py  models.py
mnemosyne/hooks/: __init__.py  decorators.py  events.py  manager.py
mnemosyne/learn/: __init__.py  dataset.py  trainer.py
mnemosyne/llm/: __init__.py  base.py  factory.py  failover.py
mnemosyne/memory/: __init__.py  persistent.py  types.py  vector_store.py
mnemosyne/ocr/: __init__.py
mnemosyne/pipeline/: __init__.py  continuous.py  (+1 more)
scripts/: analyze_code_files.py
tests/: conftest.py  test_aggregation.py  test_database.py  test_events.py  test_gateway.py  test_grounding.py  test_hooks.py  test_memory.py  test_plugins.py  test_privacy.py  test_safety.py  test_tasks.py  test_twin_core.py
(+47 files in other folders)
